stage0/src/include/lean/lean.h

static inline uint8_t lean_float_to_int8(double a) {
    int8_t result;
    if (lean_float_isnan(a)) result = 0;
    else result = -129. < a ? (a < 128. ? (int8_t)a : INT8_MAX) : INT8_MIN;
    return (uint8_t)result;
}
static inline uint16_t lean_float_to_int16(double a) {
    int16_t result;
    if (lean_float_isnan(a)) result = 0;
    else result = -32769. < a ? (a < 32768. ? (int16_t)a : INT16_MAX) : INT16_MIN;
    return (uint16_t)result;
}
static inline uint32_t lean_float_to_int32(double a) {
    int32_t result;
    if (lean_float_isnan(a)) result = 0;
    else result = -2147483649. < a ? (a < 2147483648. ? (int32_t)a : INT32_MAX) : INT32_MIN;
    return (uint32_t)result;
}
static inline uint64_t lean_float_to_int64(double a) {
    int64_t result;
    if (lean_float_isnan(a)) result = 0;
    else result = -9223372036854775809. < a ? (a < 9223372036854775808. ? (int64_t)a : INT64_MAX) : INT64_MIN;
    return (uint64_t)result;
}
static inline size_t lean_float_to_isize(double a) {
    if (sizeof(size_t) == sizeof(uint64_t)) {
        ptrdiff_t result;
        if (lean_float_isnan(a)) result = 0;
        else result = -9223372036854775809. < a ? (a < 9223372036854775808. ? (ptrdiff_t)a : INT64_MAX) : INT64_MIN;
        return (size_t)result;
    } else {
        ptrdiff_t result;
        if (lean_float_isnan(a)) result = 0;
        else result = -2147483649. < a ? (a < 2147483648. ? (ptrdiff_t)a : INT32_MAX) : INT32_MIN;
        return (size_t)result;
    }
}
static inline double lean_int8_to_float(uint8_t a) { return (double)(int8_t) a; }
static inline double lean_int16_to_float(uint16_t a) { return (double)(int16_t) a; }
static inline double lean_int32_to_float(uint32_t a) { return (double)(int32_t) a; }
static inline double lean_int64_to_float(uint64_t a) { return (double)(int64_t) a; }
static inline double lean_isize_to_float(size_t a) { return (double)(ptrdiff_t) a; }